--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -1,27 +1,3 @@
 <h1>Edit Todo</h1>
 
-<% if @todo.errors.any? %>
-  <h2>The following errors prevent the Todo from being saved:</h2>
-    <ul>
-      <% @todo.errors.full_messages.each do |msg| %>
-        <l1><%= msg %></l1><br />
-      <% end %>   
-    </ul>
-<% end %>
-
-<%= form_for @todo do |f| %>
-<p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-</p>
-<p>
-    <%= f.label :description %><br />
-    <%= f.text_area :description %>
-</p>
-<p>
-    <%= f.submit %>
-</p>
-
-<% end %>
-
-<%= link_to "Back to all listing", todos_path %>
+<%= render 'form' %>
